--- a/pages/about.html
+++ b/pages/about.html
@@ -40,10 +40,11 @@
   <meta property="og:description" content=""/>
   <meta property="og:locale" content="en_US"/>
   <meta property="og:url" content=".."/>
+  <meta property="og:image" content="images/logo.png">
 
 
 
-  <title>The Unbound Nomad &ndash; About</title>
+  <title>The Unbound Nomad &ndash; About The Unbound Nomad</title>
 
 
 </head>
@@ -52,7 +53,7 @@
 <aside>
   <div>
     <a href="../">
-      <img src="../theme/img/profile.png" alt="" title="">
+      <img src="images/logo.png" alt="" title="">
     </a>
 
     <h1>
@@ -68,13 +69,37 @@
             <li>
               <a target="_self"
                  href="../pages/about.html#about">
-                About
+                About The Unbound Nomad
+              </a>
+            </li>
+            <li>
+              <a target="_self"
+                 href="../pages/booking.html#booking">
+                Book a Ride
+              </a>
+            </li>
+            <li>
+              <a target="_self"
+                 href="../pages/concierge-trip-planning.html#concierge-trip-planning">
+                Concierge Trip Planning
               </a>
             </li>
             <li>
               <a target="_self"
                  href="../pages/contact.html#contact">
-                Contact
+                Plan My Ride
+              </a>
+            </li>
+            <li>
+              <a target="_self"
+                 href="../pages/index.html#index">
+                Home
+              </a>
+            </li>
+            <li>
+              <a target="_self"
+                 href="../pages/micro-adventures.html#micro-adventures">
+                Micro-Adventures
               </a>
             </li>
             <li>
@@ -135,20 +160,132 @@
 <article class="single">
   <header>
     
-    <h1 id="about">About</h1>
+    <h1 id="about">About The Unbound Nomad</h1>
   </header>
   <div>
-<p><img alt="Crazy Horse" height="300" src="../images/crazyHorse.png" style="float:left; padding:16px" width="300"> </p>
-<div style="text-align: justify">Are you a motorcycle enthusiast eager to embrace the thrill of the open road? Look no further than The Unbound Nomad for your passport to unforgettable motorcycle adventures across the United States. Our passion is fueled by the desire to provide riders like you with the ultimate adventure experience, offering meticulously crafted vacation packages that cater to your thirst for the open road.</div>
-<p><br></p>
-<div style="text-align: justify">The Unbound Nomad understands that every rider seeks something unique from their journey. Whether it's a leisurely day tour around the scenic Put-in-Bay, a weekend escape to explore the wonders of a National Park, an exciting vacation to iconic events like Sturgis or Daytona Bike Week, or a once-in-a-lifetime expedition across historic Route 66 – we've got you covered.</div>
-<p><br>
-<img alt="Full Throttle" height="400" src="../images/fullThrottle2.jpg" style="float:right; padding:16px" width="194"> </p>
-<div style="text-align: justify">What sets us apart is our commitment to taking care of all the intricate details, so you can focus on what matters most – enjoying the ride. From meticulous route planning that maximizes scenic vistas to ensuring you have a full tank of fuel and delectable meals along the way, we handle every aspect of your adventure. Rest assured, we've thought of everything, including comfortable lodging that complements the spirit of your journey.</div>
-<p><br></p>
-<div style="text-align: justify">The Unbound Nomad is dedicated to curating experiences that transcend the ordinary. We believe that the journey is as important as the destination, and we strive to make every moment on the road an unforgettable memory. Whether you're a seasoned rider or a newcomer to the world of motorcycle adventures, our packages are designed to cater to all levels of expertise.</div>
-<p><br></p>
-<div style="text-align: justify">Join us as we redefine motorcycle travel, creating a seamless blend of excitement, exploration, and camaraderie. The road awaits, and with The Unbound Nomad, your next great adventure is just around the corner. Gear up, rev your engines, and let the journey begin!</div>  </div>
+<div style="max-width:1000px; margin:0 auto 2rem auto; display:flex; flex-wrap:wrap; gap:1.5rem; align-items:center;">
+
+  <div style="flex:0 0 260px; max-width:260px;">
+    <img src="../images/crazyHorse.png"
+         alt="Crazy Horse"
+         style="width:100%; height:auto; border-radius:6px; box-shadow:0 6px 16px rgba(0,0,0,0.25); display:block; margin:0 auto; float:none !important;">
+  </div>
+
+  <div style="flex:1 1 280px; min-width:260px;">
+    <p>
+      I’ve been riding for more than two decades. Long days on the road, miles of quiet thinking, and the kind of freedom that doesn’t fit neatly into anyone’s expectations — that’s where this brand was born.
+    </p>
+
+    <p>
+      I built <em>The Unbound Nomad</em> because riding has never just been about getting from Point A to Point B.
+      It’s about the stories you collect, the strangers who become friends, the roads you never forget, and the feeling of rolling into a place you’ve never been and thinking:
+      <br><br>
+      <em>Yeah… this is exactly where I was supposed to be.</em>
+    </p>
+  </div>
+
+</div>
+
+<div style="max-width:420px; margin:0 auto 2.5rem auto; padding:0.9rem 1.1rem; border-radius:8px; border:1px solid #e0e0e0; box-shadow:0 4px 12px rgba(0,0,0,0.06); display:flex; gap:0.85rem; align-items:center;">
+
+  <div style="flex:0 0 64px;">
+    <img src="../images/phil_avatar.png"
+         alt="Phil – The Unbound Nomad"
+         style="width:64px; height:64px; border-radius:50%; object-fit:cover; display:block; margin:0; float:none !important;">
+  </div>
+
+  <div style="flex:1 1 auto;">
+    <p style="margin:0; font-weight:600;">Hi, I’m Phil.</p>
+    <p style="margin:0.2rem 0 0 0; font-size:0.95rem; line-height:1.4;">
+      I’m the rider behind The Unbound Nomad — your guide to better roads, intentional rides, and stories you’ll still be telling years from now.
+    </p>
+  </div>
+
+</div>
+
+<hr>
+<hr>
+<h2>The Accident That Changed Everything</h2>
+<p>In June of 2025, I had my first motorcycle accident in 23 years.</p>
+<p>One moment I was doing what I love.<br>
+The next, I was on the pavement — injured, sidelined, and watching an entire season slip away.</p>
+<p>I couldn’t ride.<br>
+I couldn’t travel.<br>
+And The Unbound Nomad — everything I’d been building — came to a full stop.</p>
+<p>But riders don’t stay down.<br>
+We rebuild.<br>
+We find a new line through the curve.</p>
+<p>The accident forced me to rethink what this brand truly meant.<br>
+And what I came back to was simple:</p>
+<p><strong>Meaningful rides. Real experiences. Roads worth remembering.</strong></p>
+<p style="text-align:center; margin:1.5rem 0;">
+  <table style="margin:0 auto; border-collapse:collapse;">
+    <tr>
+      <td style="padding:0 10px;">
+        <img src="../images/Accident1.png"
+             alt="Accident Damage Image 1"
+             style="width:300px; height:200px; object-fit:cover; border-radius:6px; display:block; margin:0 auto; float:none !important;">
+      </td>
+      <td style="padding:0 10px;">
+        <img src="../images/Accident2.png"
+             alt="Accident Damage Image 2"
+             style="width:300px; height:200px; object-fit:cover; border-radius:6px; display:block; margin:0 auto; float:none !important;">
+      </td>
+    </tr>
+  </table>
+</p>
+
+<hr>
+<hr>
+<h2>The 2026 Pivot: Ride More. Plan Less.</h2>
+<p>2026 marks a focused relaunch of The Unbound Nomad — one built around clarity, simplicity, and purpose.</p>
+<p>Two offerings now define the brand:</p>
+<h3>→ Micro-Adventures (Single-Day Guided Rides)</h3>
+<p>Curated scenic rides built for riders who want to show up, twist the throttle, and make a memory — without spending hours researching roads.</p>
+<h3>→ Concierge Trip Planning (Full-Service Ride Planning)</h3>
+<p>Multi-day custom itineraries crafted around your goals, pace, skill level, and preferred riding style.<br>
+Routes, pacing, stops, GPX files — all designed with the care of someone who’s ridden the miles himself.</p>
+<hr>
+<hr>
+<h2>Why I Do This</h2>
+<p>Because I know what motorcycling gives people:</p>
+<p>Clarity. Confidence. Peace. Adrenaline. Connection.<br>
+Stories that stay with you for years.</p>
+<p>I also know how much time riders waste trying to plan the “perfect ride,” only to second-guess themselves the whole time.</p>
+<p>This brand exists to fix that.</p>
+<p>I design rides with intention and experience — not algorithms.<br>
+Rides that feel good in the moment and even better in hindsight.<br>
+Rides built to be remembered.</p>
+<hr>
+<hr>
+<h2>The Road Ahead</h2>
+<p>I’m back on my feet, rebuilding, and riding into 2026 with more purpose than ever.</p>
+<p>If you’re ready to experience the road without the stress…<br>
+If you want a ride that’s crafted, not copied…<br>
+If you want to actually <em>feel</em> like a nomad for a day or a week…</p>
+<p>Then saddle up.</p>
+<p>Let’s make 2026 the year you stop dreaming about the perfect ride — and go take it.</p>
+<p style="margin:1.5rem 0;">
+  <a href="booking.html" class="un-btn">
+    👉 Plan My Ride
+  </a>
+</p>
+
+<hr>
+<hr>
+<h2>Connect with Me</h2>
+<p>If you’re ready to start planning your next ride — or just want to talk through what kind of trip would fit you best — the best place to reach me is right here:</p>
+<p style="margin:1rem 0;">
+  <a href="booking.html" class="un-btn">
+    🏍️ Let’s Talk Rides
+  </a>
+</p>
+
+<p>Prefer social?</p>
+<ul>
+<li><strong>Instagram:</strong> <a href="https://instagram.com/unbound_nomad">@unbound_nomad</a>  </li>
+<li><strong>TikTok:</strong> @theunboundnomad  </li>
+</ul>  </div>
 </article>
 
 <footer>
@@ -164,7 +301,7 @@
   "@type" : "Blog",
   "name": " The Unbound Nomad ",
   "url" : "..",
-  "image": "",
+  "image": "images/logo.png",
   "description": ""
 }
 </script>
