--- a/pages/privacy-policy.html
+++ b/pages/privacy-policy.html
@@ -40,6 +40,7 @@
   <meta property="og:description" content=""/>
   <meta property="og:locale" content="en_US"/>
   <meta property="og:url" content=".."/>
+  <meta property="og:image" content="images/logo.png">
 
 
 
@@ -52,7 +53,7 @@
 <aside>
   <div>
     <a href="../">
-      <img src="../theme/img/profile.png" alt="" title="">
+      <img src="images/logo.png" alt="" title="">
     </a>
 
     <h1>
@@ -68,13 +69,37 @@
             <li>
               <a target="_self"
                  href="../pages/about.html#about">
-                About
+                About The Unbound Nomad
+              </a>
+            </li>
+            <li>
+              <a target="_self"
+                 href="../pages/booking.html#booking">
+                Book a Ride
+              </a>
+            </li>
+            <li>
+              <a target="_self"
+                 href="../pages/concierge-trip-planning.html#concierge-trip-planning">
+                Concierge Trip Planning
               </a>
             </li>
             <li>
               <a target="_self"
                  href="../pages/contact.html#contact">
-                Contact
+                Plan My Ride
+              </a>
+            </li>
+            <li>
+              <a target="_self"
+                 href="../pages/index.html#index">
+                Home
+              </a>
+            </li>
+            <li>
+              <a target="_self"
+                 href="../pages/micro-adventures.html#micro-adventures">
+                Micro-Adventures
               </a>
             </li>
             <li>
@@ -184,7 +209,7 @@
   "@type" : "Blog",
   "name": " The Unbound Nomad ",
   "url" : "..",
-  "image": "",
+  "image": "images/logo.png",
   "description": ""
 }
 </script>
