--- a/pages/rides.html
+++ b/pages/rides.html
@@ -40,6 +40,7 @@
   <meta property="og:description" content=""/>
   <meta property="og:locale" content="en_US"/>
   <meta property="og:url" content=".."/>
+  <meta property="og:image" content="images/logo.png">
 
 
 
@@ -52,7 +53,7 @@
 <aside>
   <div>
     <a href="../">
-      <img src="../theme/img/profile.png" alt="" title="">
+      <img src="images/logo.png" alt="" title="">
     </a>
 
     <h1>
@@ -68,13 +69,37 @@
             <li>
               <a target="_self"
                  href="../pages/about.html#about">
-                About
+                About The Unbound Nomad
+              </a>
+            </li>
+            <li>
+              <a target="_self"
+                 href="../pages/booking.html#booking">
+                Book a Ride
+              </a>
+            </li>
+            <li>
+              <a target="_self"
+                 href="../pages/concierge-trip-planning.html#concierge-trip-planning">
+                Concierge Trip Planning
               </a>
             </li>
             <li>
               <a target="_self"
                  href="../pages/contact.html#contact">
-                Contact
+                Plan My Ride
+              </a>
+            </li>
+            <li>
+              <a target="_self"
+                 href="../pages/index.html#index">
+                Home
+              </a>
+            </li>
+            <li>
+              <a target="_self"
+                 href="../pages/micro-adventures.html#micro-adventures">
+                Micro-Adventures
               </a>
             </li>
             <li>
@@ -138,80 +163,188 @@
     <h1 id="rides">Rides</h1>
   </header>
   <div>
-<p>In addition to custom vacation packages, available year-round, here is our 2024 ride calendar:</p>
+<h1>2026 Micro-Adventures &amp; Guided Rides</h1>
+<p>In previous years, The Unbound Nomad focused on a fixed annual ride calendar.<br>
+For 2026 and beyond, the focus shifts to <strong>flexible, high-quality single-day guided rides</strong> that are built around you.</p>
+<p>Instead of cramming everything into one rigid schedule, Micro-Adventures are offered on select dates throughout the riding season, with options for:</p>
+<ul>
+<li><strong>Open group rides</strong> – join other riders on curated routes  </li>
+<li><strong>Private group rides</strong> – reserve the day for your club, friends, or organization  </li>
+</ul>
+<p style="margin:1rem 0 1.5rem 0;">
+  <a href="booking.html" class="un-btn">
+    📝 Get 2026 Ride Info
+  </a>
+</p>
+
+<hr>
+<hr>
+<h2>What to Expect on a Micro-Adventure</h2>
+<p>Every ride is designed to feel intentional — not thrown together the night before.</p>
+<ul>
+<li>Professionally curated scenic routes  </li>
+<li>Group ride briefing and safety overview  </li>
+<li>Smart pacing designed for enjoyment, not punishment  </li>
+<li>Fuel and food stops built into the plan  </li>
+<li>Scenic photo stops and storytelling along the way  </li>
+</ul>
+<p>You show up with a full tank. I handle the rest.</p>
+<hr>
+<hr>
+<h2>2026 Ride Types</h2>
+<h3>Standard Single-Day Ride — <strong>$119 per rider</strong></h3>
+<ul>
+<li>Guided group ride on a curated route  </li>
+<li>Pre-ride briefing and expectations  </li>
+<li>Planned fuel, food, and scenic stops  </li>
+</ul>
+<p>Perfect for riders who want to explore new roads without doing any planning.</p>
+<hr>
+<h3>Premium Single-Day Ride — <strong>$199 per rider</strong></h3>
+<ul>
+<li>Everything in the Standard Single-Day Ride  </li>
+<li><strong>Plus:</strong> a short rider highlight video (roughly 15–30 seconds) captured and edited for you  </li>
+</ul>
+<p>Ideal if you want both the experience <em>and</em> something to share or look back on.</p>
+<hr>
+<h3>Private Group Ride — <strong>$749 flat + $59 per rider</strong></h3>
+<p>Designed for clubs, veteran groups, or just a tight crew of friends.</p>
+<ul>
+<li>Fully custom route built for your group  </li>
+<li>Flexible schedule (subject to availability)  </li>
+<li>Group-focused pacing and stops  </li>
+<li>Extra time built in for photos and memories  </li>
+</ul>
+<h2>---</h2>
+<div style="
+  border:1px solid #ddd;
+  background:#fafafa;
+  padding:1.5rem;
+  border-radius:6px;
+  margin:2.5rem 0;
+">
+
+### 🌟 Featured 2026 Ride
+
+Looking for a bucket-list motorcycle adventure in 2026?  
+The **Legends Never Die Tour** runs the full length of Route 66 — from Chicago to Santa Monica — and riders of all levels are welcome to join any portion of the run.
+
+<p style="margin:1rem 0;">
+  <a href="/articles/legends-never-die-tour.html" class="un-btn">
+    🏍️ View the Tour
+  </a>
+</p>
+
+</div>
+
+<h2>---</h2>
+<h2>2026 Ride Calendar (Tentative)</h2>
+<p>Dates and locations may shift with weather and demand, but this gives you a sense of how the 2026 season will shape up.</p>
 <table>
 <thead>
 <tr>
-<th style="text-align: center;">Date</th>
-<th style="text-align: left;">Event</th>
-<th style="text-align: left;">Notes</th>
+<th style="text-align: right;">Month</th>
+<th>Region / Base</th>
+<th>Sample Ride Focus</th>
+<th>Availability</th>
 </tr>
 </thead>
 <tbody>
 <tr>
-<td style="text-align: center;">1/1/2024</td>
-<td style="text-align: left;">Polar Bear Run</td>
-<td style="text-align: left;">Annual New Year's Day Ride</td>
+<td style="text-align: right;">March</td>
+<td>Daytona Beach, FL</td>
+<td>Daytona Bike Week – meetups, pop-up rides &amp; content filming</td>
+<td>Limited / by request</td>
 </tr>
 <tr>
-<td style="text-align: center;">2/28/2024</td>
-<td style="text-align: left;">Sunshine Run</td>
-<td style="text-align: left;">Run from Ohio to Daytona Bike Week</td>
+<td style="text-align: right;">April</td>
+<td>Hocking Hills, OH</td>
+<td>Spring Shakedown – first twisties of the year</td>
+<td>Limited open &amp; private days</td>
 </tr>
 <tr>
-<td style="text-align: center;">4/16/2024</td>
-<td style="text-align: left;">Fist City Run</td>
-<td style="text-align: left;">Run to Motorcycles &amp; Music Revival</td>
+<td style="text-align: right;">May</td>
+<td>SE Ohio / Pre-tour prep</td>
+<td>Local shakedown rides + Legends Never Die Tour prep</td>
+<td>Open group &amp; private</td>
 </tr>
 <tr>
-<td style="text-align: center;">5/24/2024</td>
-<td style="text-align: left;">Buckeye Run</td>
-<td style="text-align: left;">Run to Ohio Bike Week</td>
+<td style="text-align: right;">May 25 – June 3</td>
+<td>Multi-state tour (TBD route)</td>
+<td><strong>Legends Never Die Tour</strong> – multi-day “miles that matter” ride</td>
+<td>Tour dates locked; details TBA</td>
 </tr>
 <tr>
-<td style="text-align: center;">7/11/2024</td>
-<td style="text-align: left;">Lincoln Run</td>
-<td style="text-align: left;">Run to Gettysburg Bike Week</td>
+<td style="text-align: right;">June</td>
+<td>Smoky Mountains (TN/NC)</td>
+<td>Dragon &amp; Skyway – Tail of the Dragon area</td>
+<td>Open group &amp; private</td>
 </tr>
 <tr>
-<td style="text-align: center;">8/1/2024</td>
-<td style="text-align: left;">Connecticut River Byway</td>
-<td style="text-align: left;">A ride along an All-American Road</td>
+<td style="text-align: right;">July</td>
+<td>Blue Ridge Parkway (VA/NC)</td>
+<td>Ridge Run – scenic sweepers &amp; overlooks</td>
+<td>Private groups preferred</td>
 </tr>
 <tr>
-<td style="text-align: center;">9/1/2024</td>
-<td style="text-align: left;">Canada</td>
-<td style="text-align: left;">Details TBD</td>
+<td style="text-align: right;">August</td>
+<td>Appalachia (WV/KY) &amp; Sturgis, SD</td>
+<td>Coal Country Curves + Sturgis Bike Week (select on-location days)</td>
+<td>On-location / limited remote</td>
+</tr>
+<tr>
+<td style="text-align: right;">September</td>
+<td>Hocking Hills / SE Ohio</td>
+<td>Fall Preview – early color &amp; cool temps</td>
+<td>Open group &amp; private</td>
+</tr>
+<tr>
+<td style="text-align: right;">October</td>
+<td>Blue Ridge &amp; Skyline Drive</td>
+<td>Peak Color Run – fall foliage focus</td>
+<td>Very limited dates</td>
+</tr>
+<tr>
+<td style="text-align: right;">November</td>
+<td>Weather-dependent regions (TBD)</td>
+<td>End-of-Season Ride – where weather allows</td>
+<td>TBD / announced in season</td>
 </tr>
 </tbody>
 </table>
-<div style="text-align: justify">Let us build your custom motorcycle adventure vacation package! The Unbound Nomad offers all-inclusive tours, with guided and unguided options and a wide variety of options to fit your budget. Here is a list of customizable tour packages The Unbound Nomad is offering in 2024:</div>
+<blockquote>
+<p><strong>Note:</strong> All dates are tentative and subject to weather, travel, and demand.<br>
+Additional pop-up rides may be added throughout the season, including during major events like Daytona and Sturgis.</p>
+</blockquote>
+<p>For the latest ride announcements, follow <strong><a href="https://www.instagram.com/unbound_nomad/">@unbound_nomad</a></strong>.</p>
+<hr>
+<hr>
+<h2>Where We Ride</h2>
+<p>These are some of the core areas 2026 Micro-Adventures and guided rides will focus on:</p>
+<ul>
+<li><strong>Ohio &amp; Appalachia:</strong> Ohio’s Windy 9, Hocking Hills, regional twisties  </li>
+<li><strong>Smoky Mountains Region:</strong> Tail of the Dragon, Cherohala Skyway area  </li>
+<li><strong>Blue Ridge &amp; Skyline:</strong> Select stretches of the Blue Ridge Parkway and Skyline Drive  </li>
+</ul>
+<p>If you have a specific region in mind, mention it when you reach out — if it’s not a place I know well enough to guide, I’ll tell you straight.</p>
+<hr>
+<hr>
+<h2>Book a Ride or Reserve a Date</h2>
+<p>If you see a month or region that gets your attention — or you want to reserve a <strong>Private Group Ride</strong> before dates fill up:</p>
+<p style="margin:1rem 0 1.25rem 0;">
+  <a href="booking.html" class="un-btn">
+    🗓️ Request a 2026 Ride
+  </a>
+</p>
 
-<h1>Colorado</h1>
-<p><a href="../san-juan-mountain-skyway-tour.html">San Juan Mountain Skyway</a></p>
-<h1>Idaho</h1>
-<p><a href="../northwest-passage-scenic-byway-tour.html">Northwest Passage Scenic Byway</a></p>
-<h1>Ohio</h1>
-<p><a href="../ohios-windy-9-tour.html#ohios-windy-9-tour">The Windy 9</a></p>
-<h1>South Dakota</h1>
-<p><a href="../badlands-tour.html">Badlands Tour</a><br>
-<a href="../devils-tower-tour.html">Devil's Tower</a><br>
-<a href="../native-american-scenic-byway-tour.html#native-american-scenic-byway-tour">Native American Scenic Byway</a></p>
-<h1>Tennessee</h1>
-<p><a href="../tail-of-the-dragon-tour.html">Tail of the Dragon</a><br>
-<a href="../cherohalaskyway-tour.html">Cherohala Skyway</a></p>
-<h1>Virginia</h1>
-<p><a href="../skyline-drive-tour.html#skyline-drive-tour">Skyline Drive</a></p>
-<h1>Wyoming</h1>
-<p><a href="../beartooth-highway-tour.html">Beartooth Highway</a><br>
-<a href="../yellowstone-national-park-tour.html">Yellowstone National Park</a></p>
-<h1>Rallies</h1>
-<p><a href="../daytona-bike-week.html">Daytona Bike Week</a><br>
-<a href="../ohio-bike-week.html#ohio-bike-week">Ohio Bike Week</a><br>
-<a href="../sturgis-motorcycle-rally.html">Sturgis</a></p>
-<h1>Multi-state runs</h1>
-<p><a href="../natchez-trace-tour.html">Natchez Trace</a><br>
-<a href="../blue-ridge-parkway-tour.html">Blue Ridge Parkway</a></p>  </div>
+<p>When you reach out, it helps to include:</p>
+<ul>
+<li>Which month(s) and region(s) you’re interested in  </li>
+<li>Whether you’re looking for an <strong>open ride</strong> or a <strong>private group</strong>  </li>
+<li>Approximate number of riders  </li>
+<li>Any must-see roads or general preferences (pace, scenery, mileage)  </li>
+</ul>
+<p>From there, I’ll help you dial in the right ride and lock in your spot.</p>  </div>
 </article>
 
 <footer>
@@ -227,7 +360,7 @@
   "@type" : "Blog",
   "name": " The Unbound Nomad ",
   "url" : "..",
-  "image": "",
+  "image": "images/logo.png",
   "description": ""
 }
 </script>
