--- a/tags.html
+++ b/tags.html
@@ -40,6 +40,7 @@
   <meta property="og:description" content=""/>
   <meta property="og:locale" content="en_US"/>
   <meta property="og:url" content="."/>
+  <meta property="og:image" content="images/logo.png">
 
   <title>The Unbound Nomad &ndash; Tags</title>
 
@@ -50,7 +51,7 @@
 <aside>
   <div>
     <a href="./">
-      <img src="./theme/img/profile.png" alt="" title="">
+      <img src="images/logo.png" alt="" title="">
     </a>
 
     <h1>
@@ -66,13 +67,37 @@
             <li>
               <a target="_self"
                  href="./pages/about.html#about">
-                About
+                About The Unbound Nomad
+              </a>
+            </li>
+            <li>
+              <a target="_self"
+                 href="./pages/booking.html#booking">
+                Book a Ride
+              </a>
+            </li>
+            <li>
+              <a target="_self"
+                 href="./pages/concierge-trip-planning.html#concierge-trip-planning">
+                Concierge Trip Planning
               </a>
             </li>
             <li>
               <a target="_self"
                  href="./pages/contact.html#contact">
-                Contact
+                Plan My Ride
+              </a>
+            </li>
+            <li>
+              <a target="_self"
+                 href="./pages/index.html#index">
+                Home
+              </a>
+            </li>
+            <li>
+              <a target="_self"
+                 href="./pages/micro-adventures.html#micro-adventures">
+                Micro-Adventures
               </a>
             </li>
             <li>
@@ -135,14 +160,16 @@
     <h1 id="tags">Tags</h1>
   </header>
   <div>
-    <ul class="list">          <li><a href="./tag/adventure.html">Adventure</a> (15)</li>
+    <ul class="list">          <li><a href="./tag/adventure.html">Adventure</a> (16)</li>
           <li><a href="./tag/gear.html">Gear</a> (1)</li>
+          <li><a href="./tag/indian-motorcycle.html">Indian Motorcycle</a> (1)</li>
           <li><a href="./tag/lifestyle.html">Lifestyle</a> (17)</li>
-          <li><a href="./tag/motorcycles.html">Motorcycles</a> (17)</li>
+          <li><a href="./tag/motorcycles.html">Motorcycles</a> (18)</li>
           <li><a href="./tag/rain.html">Rain</a> (1)</li>
           <li><a href="./tag/riding.html">Riding</a> (1)</li>
+          <li><a href="./tag/route-66.html">Route 66</a> (1)</li>
           <li><a href="./tag/skill.html">Skill</a> (1)</li>
-          <li><a href="./tag/tours.html">Tours</a> (15)</li>
+          <li><a href="./tag/tours.html">Tours</a> (16)</li>
     </ul>
   </div>
 </article>
@@ -160,7 +187,7 @@
   "@type" : "Blog",
   "name": " The Unbound Nomad ",
   "url" : ".",
-  "image": "",
+  "image": "images/logo.png",
   "description": ""
 }
 </script>
