--- a/archives.html
+++ b/archives.html
@@ -40,6 +40,7 @@
   <meta property="og:description" content=""/>
   <meta property="og:locale" content="en_US"/>
   <meta property="og:url" content="."/>
+  <meta property="og:image" content="images/logo.png">
 
   <title>The Unbound Nomad &ndash; Archives</title>
 
@@ -50,7 +51,7 @@
 <aside>
   <div>
     <a href="./">
-      <img src="./theme/img/profile.png" alt="" title="">
+      <img src="images/logo.png" alt="" title="">
     </a>
 
     <h1>
@@ -66,13 +67,37 @@
             <li>
               <a target="_self"
                  href="./pages/about.html#about">
-                About
+                About The Unbound Nomad
+              </a>
+            </li>
+            <li>
+              <a target="_self"
+                 href="./pages/booking.html#booking">
+                Book a Ride
+              </a>
+            </li>
+            <li>
+              <a target="_self"
+                 href="./pages/concierge-trip-planning.html#concierge-trip-planning">
+                Concierge Trip Planning
               </a>
             </li>
             <li>
               <a target="_self"
                  href="./pages/contact.html#contact">
-                Contact
+                Plan My Ride
+              </a>
+            </li>
+            <li>
+              <a target="_self"
+                 href="./pages/index.html#index">
+                Home
+              </a>
+            </li>
+            <li>
+              <a target="_self"
+                 href="./pages/micro-adventures.html#micro-adventures">
+                Micro-Adventures
               </a>
             </li>
             <li>
@@ -137,6 +162,11 @@
   <div>
     <dl>
 
+          <dt>Mon 25 May 2026</dt>
+
+        <dd>
+          <a href="./blog/legends-never-die-tour.html">Legends Never Die Tour</a>
+        </dd>
           <dt>Sun 14 January 2024</dt>
 
         <dd>
@@ -239,7 +269,7 @@
   "@type" : "Blog",
   "name": " The Unbound Nomad ",
   "url" : ".",
-  "image": "",
+  "image": "images/logo.png",
   "description": ""
 }
 </script>
