--- a/drafts/marblehead-and-put-in-bay.html
+++ b/drafts/marblehead-and-put-in-bay.html
@@ -32,24 +32,24 @@
 
  
 
-<meta name="author" content="Unbound Nomad" />
-<meta name="description" content="Distance : Ride Time 202 miles : 6 hours 35 mi 1h Marblehead is a village in Ottawa County, Ohio. Sitting at the tip of the Marblehead Peninsula, which divides Lake Erie proper from Sandusky Bay. Marblehead is home to the Marblehead Lighthouse, the oldest continuously-operating lighthouse on the American side of …" />
+<meta name="author" content="The Unbound Nomad" />
+<meta name="description" content="Marblehead &amp; Put-in-Bay 35 mi 1h Marblehead is a village in Ottawa County, Ohio. Sitting at the tip of the Marblehead Peninsula, which divides Lake Erie proper from Sandusky Bay. Marblehead is home to the Marblehead Lighthouse, the oldest continuously-operating lighthouse on the American side of the Great Lakes. The lighthouse …" />
 <meta name="keywords" content="Motorcycles, Lifestyle">
 
 
   <meta property="og:site_name" content="The Unbound Nomad"/>
   <meta property="og:title" content="Marblehead &amp; Put-in-Bay"/>
-  <meta property="og:description" content="Distance : Ride Time 202 miles : 6 hours 35 mi 1h Marblehead is a village in Ottawa County, Ohio. Sitting at the tip of the Marblehead Peninsula, which divides Lake Erie proper from Sandusky Bay. Marblehead is home to the Marblehead Lighthouse, the oldest continuously-operating lighthouse on the American side of …"/>
+  <meta property="og:description" content="Marblehead &amp; Put-in-Bay 35 mi 1h Marblehead is a village in Ottawa County, Ohio. Sitting at the tip of the Marblehead Peninsula, which divides Lake Erie proper from Sandusky Bay. Marblehead is home to the Marblehead Lighthouse, the oldest continuously-operating lighthouse on the American side of the Great Lakes. The lighthouse …"/>
   <meta property="og:locale" content="en_US"/>
   <meta property="og:url" content="../drafts/marblehead-and-put-in-bay.html"/>
   <meta property="og:type" content="article"/>
   <meta property="article:published_time" content="2024-01-13 20:14:00+00:00"/>
   <meta property="article:modified_time" content=""/>
-  <meta property="article:author" content="../author/unbound-nomad.html">
+  <meta property="article:author" content="../author/the-unbound-nomad.html">
   <meta property="article:section" content="Blog"/>
   <meta property="article:tag" content="Motorcycles"/>
   <meta property="article:tag" content="Lifestyle"/>
-  <meta property="og:image" content="">
+  <meta property="og:image" content="images/logo.png">
 
   <title>The Unbound Nomad &ndash; Marblehead &amp; Put-in-Bay</title>
 
@@ -60,7 +60,7 @@
 <aside>
   <div>
     <a href="../">
-      <img src="../theme/img/profile.png" alt="" title="">
+      <img src="images/logo.png" alt="" title="">
     </a>
 
     <h1>
@@ -76,13 +76,37 @@
             <li>
               <a target="_self"
                  href="../pages/about.html#about">
-                About
+                About The Unbound Nomad
+              </a>
+            </li>
+            <li>
+              <a target="_self"
+                 href="../pages/booking.html#booking">
+                Book a Ride
+              </a>
+            </li>
+            <li>
+              <a target="_self"
+                 href="../pages/concierge-trip-planning.html#concierge-trip-planning">
+                Concierge Trip Planning
               </a>
             </li>
             <li>
               <a target="_self"
                  href="../pages/contact.html#contact">
-                Contact
+                Plan My Ride
+              </a>
+            </li>
+            <li>
+              <a target="_self"
+                 href="../pages/index.html#index">
+                Home
+              </a>
+            </li>
+            <li>
+              <a target="_self"
+                 href="../pages/micro-adventures.html#micro-adventures">
+                Micro-Adventures
               </a>
             </li>
             <li>
@@ -152,38 +176,28 @@
 
 
   <div>
-    <table>
-<thead>
-<tr>
-<th style="text-align: center;">Distance</th>
-<th style="text-align: center;">:</th>
-<th style="text-align: left;">Ride Time</th>
-<th style="text-align: center;"></th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td style="text-align: center;">202 miles</td>
-<td style="text-align: center;">:</td>
-<td style="text-align: left;">6 hours</td>
-<td style="text-align: center;"><FORM><INPUT TYPE="button" VALUE="Book Today!" onClick="parent.location='mailto:unboundnomad@unboundnomad.com?subject=Booking Request: Marblehead & Put-in-Bay'"></FORM></td>
-</tr>
-<tr>
-<td style="text-align: center;"><br></td>
-<td style="text-align: center;"></td>
-<td style="text-align: left;"></td>
-<td style="text-align: center;"></td>
-</tr>
-</tbody>
-</table>
-<div style="text-align: justify">
-35 mi 
+    <h1>Marblehead &amp; Put-in-Bay</h1>
+<p>35 mi 
 1h 
-Marblehead is a village in Ottawa County, Ohio. Sitting at the tip of the Marblehead Peninsula, which divides Lake Erie proper from Sandusky Bay. Marblehead is home to the Marblehead Lighthouse, the oldest continuously-operating lighthouse on the American side of the Great Lakes. The lighthouse is a part of the Marblehead Lighthouse State Park located within the village. Marblehead is also home to a United States Coast Guard station. Nearby, in Sandusky Bay, is Johnson's Island, a former Confederate officer prisoner of war camp during the Civil War.
-
-8mi 
+Marblehead is a village in Ottawa County, Ohio. Sitting at the tip of the Marblehead Peninsula, which divides Lake Erie proper from Sandusky Bay. Marblehead is home to the Marblehead Lighthouse, the oldest continuously-operating lighthouse on the American side of the Great Lakes. The lighthouse is a part of the Marblehead Lighthouse State Park located within the village. Marblehead is also home to a United States Coast Guard station. Nearby, in Sandusky Bay, is Johnson's Island, a former Confederate officer prisoner of war camp during the Civil War.</p>
+<p>8mi 
 35 min
-Put-in-Bay is an Ohio village on South Bass Island in Lake Erie. Perry's Victory and International Peace Memorial is a huge column commemorating the 1812 Battle of Lake Erie. Exhibits at the Lake Erie Islands Historical Museum explore area winemaking and ships. The lakeside South Bass Island State Park has a boat ramp and a stone beach. Perry’s Cave Family Fun Center includes a limestone cave and a butterfly house. </div>
+Put-in-Bay is an Ohio village on South Bass Island in Lake Erie. Perry's Victory and International Peace Memorial is a huge column commemorating the 1812 Battle of Lake Erie. Exhibits at the Lake Erie Islands Historical Museum explore area winemaking and ships. The lakeside South Bass Island State Park has a boat ramp and a stone beach. Perry’s Cave Family Fun Center includes a limestone cave and a butterfly house.</p>
+<hr>
+<h2>Interested in This Ride?</h2>
+<p style="margin:1rem 0 1.25rem 0;">
+  <a href="booking.html"
+     style="display:inline-block; background-color:#660099; color:#3DA80A;
+            padding:0.7rem 1.6rem; border-radius:6px; text-decoration:none;
+            font-weight:600;">
+    🏍️ Plan This Ride
+  </a>
+</p>
+
+<p style="font-size:0.95rem; margin-top:0.3rem;">
+  When you reach out, mention <strong>“Marblehead & Put-in-Bay”</strong> and let me know your
+  approximate dates, starting point, and how many riders you expect.
+</p>
   </div>
   <div class="tag-cloud">
     <p>
@@ -212,7 +226,7 @@ Put-in-Bay is an Ohio village on South Bass Island in Lake Erie. Perry's Victory
   "@type" : "Blog",
   "name": " The Unbound Nomad ",
   "url" : "..",
-  "image": "",
+  "image": "images/logo.png",
   "description": ""
 }
 </script>
