--- a/drafts/peak-to-peak-scenic-byway.html
+++ b/drafts/peak-to-peak-scenic-byway.html
@@ -32,24 +32,24 @@
 
  
 
-<meta name="author" content="Unbound Nomad" />
-<meta name="description" content="Distance : Ride Time 55 miles : 80 minutes Welcome to the showcase of the Front Range. Less than an hour from Denver, Boulder, or Fort Collins, this 55-mile-long route provides matchless views of the Continental Divide and its timbered approaches. The string of popular attractions along the way - Rocky Mountain National …" />
+<meta name="author" content="The Unbound Nomad" />
+<meta name="description" content="Peak to Peak Scenic Byway Welcome to the showcase of the Front Range. Less than an hour from Denver, Boulder, or Fort Collins, this 55-mile-long route provides matchless views of the Continental Divide and its timbered approaches. The string of popular attractions along the way - Rocky Mountain National Park, Golden …" />
 <meta name="keywords" content="Motorcycles, Lifestyle">
 
 
   <meta property="og:site_name" content="The Unbound Nomad"/>
   <meta property="og:title" content="Peak to Peak Scenic Byway"/>
-  <meta property="og:description" content="Distance : Ride Time 55 miles : 80 minutes Welcome to the showcase of the Front Range. Less than an hour from Denver, Boulder, or Fort Collins, this 55-mile-long route provides matchless views of the Continental Divide and its timbered approaches. The string of popular attractions along the way - Rocky Mountain National …"/>
+  <meta property="og:description" content="Peak to Peak Scenic Byway Welcome to the showcase of the Front Range. Less than an hour from Denver, Boulder, or Fort Collins, this 55-mile-long route provides matchless views of the Continental Divide and its timbered approaches. The string of popular attractions along the way - Rocky Mountain National Park, Golden …"/>
   <meta property="og:locale" content="en_US"/>
   <meta property="og:url" content="../drafts/peak-to-peak-scenic-byway.html"/>
   <meta property="og:type" content="article"/>
   <meta property="article:published_time" content="2024-01-13 20:08:00+00:00"/>
   <meta property="article:modified_time" content=""/>
-  <meta property="article:author" content="../author/unbound-nomad.html">
+  <meta property="article:author" content="../author/the-unbound-nomad.html">
   <meta property="article:section" content="Blog"/>
   <meta property="article:tag" content="Motorcycles"/>
   <meta property="article:tag" content="Lifestyle"/>
-  <meta property="og:image" content="">
+  <meta property="og:image" content="images/logo.png">
 
   <title>The Unbound Nomad &ndash; Peak to Peak Scenic Byway</title>
 
@@ -60,7 +60,7 @@
 <aside>
   <div>
     <a href="../">
-      <img src="../theme/img/profile.png" alt="" title="">
+      <img src="images/logo.png" alt="" title="">
     </a>
 
     <h1>
@@ -76,13 +76,37 @@
             <li>
               <a target="_self"
                  href="../pages/about.html#about">
-                About
+                About The Unbound Nomad
+              </a>
+            </li>
+            <li>
+              <a target="_self"
+                 href="../pages/booking.html#booking">
+                Book a Ride
+              </a>
+            </li>
+            <li>
+              <a target="_self"
+                 href="../pages/concierge-trip-planning.html#concierge-trip-planning">
+                Concierge Trip Planning
               </a>
             </li>
             <li>
               <a target="_self"
                  href="../pages/contact.html#contact">
-                Contact
+                Plan My Ride
+              </a>
+            </li>
+            <li>
+              <a target="_self"
+                 href="../pages/index.html#index">
+                Home
+              </a>
+            </li>
+            <li>
+              <a target="_self"
+                 href="../pages/micro-adventures.html#micro-adventures">
+                Micro-Adventures
               </a>
             </li>
             <li>
@@ -152,31 +176,23 @@
 
 
   <div>
-    <table>
-<thead>
-<tr>
-<th style="text-align: center;">Distance</th>
-<th style="text-align: center;">:</th>
-<th style="text-align: left;">Ride Time</th>
-<th style="text-align: center;"></th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td style="text-align: center;">55 miles</td>
-<td style="text-align: center;">:</td>
-<td style="text-align: left;">80 minutes</td>
-<td style="text-align: center;"><FORM><INPUT TYPE="button" VALUE="Book Today!" onClick="parent.location='mailto:unboundnomad@unboundnomad.com?subject=Booking Request: Peak to Peak Scenic Byway'"></FORM></td>
-</tr>
-<tr>
-<td style="text-align: center;"><br></td>
-<td style="text-align: center;"></td>
-<td style="text-align: left;"></td>
-<td style="text-align: center;"></td>
-</tr>
-</tbody>
-</table>
-<div style="text-align: justify">Welcome to the showcase of the Front Range. Less than an hour from Denver, Boulder, or Fort Collins, this 55-mile-long route provides matchless views of the Continental Divide and its timbered approaches. The string of popular attractions along the way - Rocky Mountain National Park, Golden Gate Canyon State Park, Arapaho and Roosevelt National Forests, the Indian Peaks Wilderness Area, Eldora Ski Resort - combine recreation with nature preservation. The gravel roads criss-crossing the main highway lead to high-country lakes, trailheads, campgrounds, the Moffat Tunnel's east portal, and ghost towns at Hesse and Apex. Established in 1918 this is Colorado's oldest scenic byway.</div>
+    <h1>Peak to Peak Scenic Byway</h1>
+<p>Welcome to the showcase of the Front Range. Less than an hour from Denver, Boulder, or Fort Collins, this 55-mile-long route provides matchless views of the Continental Divide and its timbered approaches. The string of popular attractions along the way - Rocky Mountain National Park, Golden Gate Canyon State Park, Arapaho and Roosevelt National Forests, the Indian Peaks Wilderness Area, Eldora Ski Resort - combine recreation with nature preservation. The gravel roads criss-crossing the main highway lead to high-country lakes, trailheads, campgrounds, the Moffat Tunnel's east portal, and ghost towns at Hesse and Apex. Established in 1918 this is Colorado's oldest scenic byway.</p>
+<hr>
+<h2>Interested in This Ride?</h2>
+<p style="margin:1rem 0 1.25rem 0;">
+  <a href="booking.html"
+     style="display:inline-block; background-color:#660099; color:#3DA80A;
+            padding:0.7rem 1.6rem; border-radius:6px; text-decoration:none;
+            font-weight:600;">
+    🏍️ Plan This Ride
+  </a>
+</p>
+
+<p style="font-size:0.95rem; margin-top:0.3rem;">
+  When you reach out, mention <strong>“Peak to Peak Scenic Byway”</strong> and let me know your
+  approximate dates, starting point, and how many riders you expect.
+</p>
   </div>
   <div class="tag-cloud">
     <p>
@@ -205,7 +221,7 @@
   "@type" : "Blog",
   "name": " The Unbound Nomad ",
   "url" : "..",
-  "image": "",
+  "image": "images/logo.png",
   "description": ""
 }
 </script>
