--- a/pages/contact.html
+++ b/pages/contact.html
@@ -40,10 +40,11 @@
   <meta property="og:description" content=""/>
   <meta property="og:locale" content="en_US"/>
   <meta property="og:url" content=".."/>
+  <meta property="og:image" content="images/logo.png">
 
 
 
-  <title>The Unbound Nomad &ndash; Contact</title>
+  <title>The Unbound Nomad &ndash; Plan My Ride</title>
 
 
 </head>
@@ -52,7 +53,7 @@
 <aside>
   <div>
     <a href="../">
-      <img src="../theme/img/profile.png" alt="" title="">
+      <img src="images/logo.png" alt="" title="">
     </a>
 
     <h1>
@@ -68,13 +69,37 @@
             <li>
               <a target="_self"
                  href="../pages/about.html#about">
-                About
+                About The Unbound Nomad
+              </a>
+            </li>
+            <li>
+              <a target="_self"
+                 href="../pages/booking.html#booking">
+                Book a Ride
+              </a>
+            </li>
+            <li>
+              <a target="_self"
+                 href="../pages/concierge-trip-planning.html#concierge-trip-planning">
+                Concierge Trip Planning
               </a>
             </li>
             <li>
               <a target="_self"
                  href="../pages/contact.html#contact">
-                Contact
+                Plan My Ride
+              </a>
+            </li>
+            <li>
+              <a target="_self"
+                 href="../pages/index.html#index">
+                Home
+              </a>
+            </li>
+            <li>
+              <a target="_self"
+                 href="../pages/micro-adventures.html#micro-adventures">
+                Micro-Adventures
               </a>
             </li>
             <li>
@@ -135,25 +160,26 @@
 <article class="single">
   <header>
     
-    <h1 id="contact">Contact</h1>
+    <h1 id="contact">Plan My Ride</h1>
   </header>
   <div>
-<p>Welcome to our contact page! We're excited to hear from you. If you have any questions, suggestions, or just want to say hello, feel free to reach out through the following channels:</p>
-<ul>
-<li>
-<p><strong>Email:</strong> <a href="mailto:unboundnomad@unboundnomad.com">unboundnomad@unboundnomad.com</a></p>
-</li>
-<li>
-<p><strong>Twitter:</strong> <a href="https://x.com/unbound_nomad">@unbound_nomad</a></p>
-</li>
-<li>
-<p><strong>Facebook:</strong> <a href="https://www.facebook.com/profile.php?id=61554818544356">The Unbound Nomad</a></p>
-</li>
-<li>
-<p><strong>Instagram:</strong> <a href="https://www.instagram.com/unbound_nomad/">@unbound_nomad</a></p>
-</li>
-</ul>
-<p>Feel free to connect with us on any of the platforms above. We value your feedback and look forward to hearing from you!</p>  </div>
+<p>For booking rides, trip planning, or events, please use the Booking Form.</p>
+<p style="margin-top: 1rem;">
+  <a href="booking.html" class="un-btn">
+    👉 Go to Booking Form
+  </a>
+</p>
+
+<h2>---</h2>
+<p>For booking rides, trip planning, or events, please use the Booking Form.</p>
+<p style="margin-top: 1rem;">
+  <a href="booking.html" class="un-btn">
+    👉 Go to Booking Form
+  </a>
+</p>
+
+<p>If you have general questions outside of ride planning, you can still reach me at:</p>
+<p><strong>unboundnomad@unboundnomad.com</strong></p>  </div>
 </article>
 
 <footer>
@@ -169,7 +195,7 @@
   "@type" : "Blog",
   "name": " The Unbound Nomad ",
   "url" : "..",
-  "image": "",
+  "image": "images/logo.png",
   "description": ""
 }
 </script>
