--- a/pages/privacy-policy.html
+++ b/pages/privacy-policy.html
@@ -40,6 +40,7 @@
   <meta property="og:description" content=""/>
   <meta property="og:locale" content="en_US"/>
   <meta property="og:url" content=".."/>
+  <meta property="og:image" content="theme/img/logo.png">
 
 
 
@@ -52,7 +53,7 @@
 <aside>
   <div>
     <a href="../">
-      <img src="../theme/img/profile.png" alt="" title="">
+      <img src="theme/img/logo.png" alt="" title="">
     </a>
 
     <h1>
@@ -108,26 +109,10 @@
               </a>
             </li>
 
-          <li>
-            <a target="_self" href="https://www.indianmotorcycle.com" >Indian Motorcycles</a>
-          </li>
-          <li>
-            <a target="_self" href="https://lexin-moto.com" >Lexin Moto</a>
-          </li>
-          <li>
-            <a target="_self" href="https://shoei-helmets.com/" >Shoei Helmets</a>
-          </li>
       </ul>
     </nav>
 
     <ul class="social">
-      <li>
-        <a class="sc-youtube"
-           href="https://www.youtube.com/channel/UCvAAwLc11f4EUAAhSuLK5pw"
-           target="_blank">
-          <i class="fa-brands fa-youtube"></i>
-        </a>
-      </li>
       <li>
         <a class="sc-facebook"
            href="https://www.facebook.com/profile.php?id=61554818544356"
@@ -136,10 +121,10 @@
         </a>
       </li>
       <li>
-        <a class="sc-twitter (@unbound_nomad)"
-           href="https://x.com/unbound_nomad/"
+        <a class="sc-youtube"
+           href="https://www.youtube.com/channel/UCvAAwLc11f4EUAAhSuLK5pw"
            target="_blank">
-          <i class="fa-brands fa-twitter (@unbound_nomad)"></i>
+          <i class="fa-brands fa-youtube"></i>
         </a>
       </li>
       <li>
@@ -215,9 +200,8 @@
         </ul>
 
           <ul class="un-links">
-              <li><a href="https://www.youtube.com/channel/UCvAAwLc11f4EUAAhSuLK5pw" rel="noopener">youtube</a></li>
               <li><a href="https://www.facebook.com/profile.php?id=61554818544356" rel="noopener">facebook</a></li>
-              <li><a href="https://x.com/unbound_nomad/" rel="noopener">twitter (@unbound_nomad)</a></li>
+              <li><a href="https://www.youtube.com/channel/UCvAAwLc11f4EUAAhSuLK5pw" rel="noopener">youtube</a></li>
               <li><a href="https://www.instagram.com/unbound_nomad/" rel="noopener">instagram (@unbound_nomad)</a></li>
           </ul>
 
@@ -236,7 +220,7 @@
   "@type" : "Blog",
   "name": " The Unbound Nomad ",
   "url" : "..",
-  "image": "",
+  "image": "theme/img/logo.png",
   "description": ""
 }
 </script>
