--- a/drafts/marblehead-and-put-in-bay.html
+++ b/drafts/marblehead-and-put-in-bay.html
@@ -49,7 +49,7 @@
   <meta property="article:section" content="Blog"/>
   <meta property="article:tag" content="Motorcycles"/>
   <meta property="article:tag" content="Lifestyle"/>
-  <meta property="og:image" content="">
+  <meta property="og:image" content="theme/img/logo.png">
 
   <title>The Unbound Nomad &ndash; Marblehead &amp; Put-in-Bay</title>
 
@@ -60,7 +60,7 @@
 <aside>
   <div>
     <a href="../">
-      <img src="../theme/img/profile.png" alt="" title="">
+      <img src="theme/img/logo.png" alt="" title="">
     </a>
 
     <h1>
@@ -116,26 +116,10 @@
               </a>
             </li>
 
-          <li>
-            <a target="_self" href="https://www.indianmotorcycle.com" >Indian Motorcycles</a>
-          </li>
-          <li>
-            <a target="_self" href="https://lexin-moto.com" >Lexin Moto</a>
-          </li>
-          <li>
-            <a target="_self" href="https://shoei-helmets.com/" >Shoei Helmets</a>
-          </li>
       </ul>
     </nav>
 
     <ul class="social">
-      <li>
-        <a class="sc-youtube"
-           href="https://www.youtube.com/channel/UCvAAwLc11f4EUAAhSuLK5pw"
-           target="_blank">
-          <i class="fa-brands fa-youtube"></i>
-        </a>
-      </li>
       <li>
         <a class="sc-facebook"
            href="https://www.facebook.com/profile.php?id=61554818544356"
@@ -144,10 +128,10 @@
         </a>
       </li>
       <li>
-        <a class="sc-twitter (@unbound_nomad)"
-           href="https://x.com/unbound_nomad/"
+        <a class="sc-youtube"
+           href="https://www.youtube.com/channel/UCvAAwLc11f4EUAAhSuLK5pw"
            target="_blank">
-          <i class="fa-brands fa-twitter (@unbound_nomad)"></i>
+          <i class="fa-brands fa-youtube"></i>
         </a>
       </li>
       <li>
@@ -186,7 +170,7 @@ Put-in-Bay is an Ohio village on South Bass Island in Lake Erie. Perry's Victory
 <hr>
 <h2>Interested in This Ride?</h2>
 <p style="margin:1rem 0 1.25rem 0;">
-  <a href="booking.html"
+  <a href="../pages/booking.html"
      style="display:inline-block; background-color:#660099; color:#3DA80A;
             padding:0.7rem 1.6rem; border-radius:6px; text-decoration:none;
             font-weight:600;">
@@ -233,9 +217,8 @@ Put-in-Bay is an Ohio village on South Bass Island in Lake Erie. Perry's Victory
         </ul>
 
           <ul class="un-links">
-              <li><a href="https://www.youtube.com/channel/UCvAAwLc11f4EUAAhSuLK5pw" rel="noopener">youtube</a></li>
               <li><a href="https://www.facebook.com/profile.php?id=61554818544356" rel="noopener">facebook</a></li>
-              <li><a href="https://x.com/unbound_nomad/" rel="noopener">twitter (@unbound_nomad)</a></li>
+              <li><a href="https://www.youtube.com/channel/UCvAAwLc11f4EUAAhSuLK5pw" rel="noopener">youtube</a></li>
               <li><a href="https://www.instagram.com/unbound_nomad/" rel="noopener">instagram (@unbound_nomad)</a></li>
           </ul>
 
@@ -254,7 +237,7 @@ Put-in-Bay is an Ohio village on South Bass Island in Lake Erie. Perry's Victory
   "@type" : "Blog",
   "name": " The Unbound Nomad ",
   "url" : "..",
-  "image": "",
+  "image": "theme/img/logo.png",
   "description": ""
 }
 </script>
